@@ -31,6 +31,7 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.tuple.ImmutablePair;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.logging.log4j.LogManager;
@@ -42,6 +43,7 @@ import org.kitodo.api.dataformat.PhysicalDivision;
 import org.kitodo.api.dataformat.View;
 import org.kitodo.data.database.beans.Process;
 import org.kitodo.data.database.beans.Template;
+import org.kitodo.exceptions.FileStructureValidationException;
 import org.kitodo.exceptions.NoSuchMetadataFieldException;
 import org.kitodo.exceptions.UnknownTreeNodeDataException;
 import org.kitodo.production.helper.Helper;
@@ -54,6 +56,7 @@ import org.primefaces.event.NodeSelectEvent;
 import org.primefaces.event.TreeDragDropEvent;
 import org.primefaces.model.DefaultTreeNode;
 import org.primefaces.model.TreeNode;
+import org.xml.sax.SAXException;
 
 public class StructurePanel implements Serializable {
     private static final Logger logger = LogManager.getLogger(StructurePanel.class);
@@ -320,7 +323,7 @@ public class StructurePanel implements Serializable {
     public TreeNode<Object> getSelectedLogicalNodeIfSingle() {
         List<TreeNode<Object>> nodes = getSelectedLogicalNodes();
         if (Objects.nonNull(nodes) && nodes.size() == 1) {
-            return nodes.get(0);
+            return nodes.getFirst();
         }
         return null;
     }
@@ -949,13 +952,13 @@ public class StructurePanel implements Serializable {
                     }
                 }
             }
-        } catch (IOException e) {
+        } catch (IOException | SAXException | FileStructureValidationException e) {
             /*
              * Error case: The metadata file of the parent process cannot be
              * loaded. Show the process title of the parent process and the
              * warning sign.
              */
-            Helper.setErrorMessage("metadataReadError", e.getMessage(), logger, e);
+            Helper.setErrorMessage(Helper.getTranslation("metadataReadError", parent.getTitle()), e.getMessage(), logger, e);
             addTreeNode(parent.getTitle(), true, true, parent, tree).setType(STRUCTURE_NODE_TYPE);
         }
     }
@@ -1169,9 +1172,66 @@ public class StructurePanel implements Serializable {
             // select those tree nodes
             StructureTreeOperations.selectTreeNodes(selectedTreeNodes);
 
+            // workaround to store ID of linked parent process
+            TreeNode<Object> currentlySelectedLogicalNode = getSelectedLogicalNodeIfSingle();
+            if (selectedTreeNodes.isEmpty() && Objects.nonNull(currentlySelectedLogicalNode)
+                    && currentlySelectedLogicalNode.getData() instanceof StructureTreeNode) {
+                setLinkedParentProcessId(currentlySelectedLogicalNode);
+            }
+
             // remember new selection
             previouslySelectedLogicalNodes = getSelectedLogicalNodes();
             setSelectedLogicalNodes(new ArrayList<>(selectedTreeNodes));
+        }
+    }
+
+    /**
+     * This method determines the ID of a linked parent process via it's label in the logical structure tree.
+     * Since the workpiece of a process does not contain a reference to potential parent processes (this relation
+     * is only stored in the database and "simulated" in the structure tree visible in the metadata editor), the
+     *
+     * @param logicalNode
+     *          TreeNode representing the linked parent process
+     */
+    private void setLinkedParentProcessId(TreeNode<Object> logicalNode) {
+        String nodeLabel = ((StructureTreeNode) logicalNode.getData()).getLabel();
+        if (nodeLabel.contains("[") && nodeLabel.indexOf("[") < nodeLabel.indexOf("]")) {
+            String idString = nodeLabel.substring(nodeLabel.indexOf("[") + 1, nodeLabel.indexOf("]"));
+            if (StringUtils.isNumeric(idString)) {
+                try {
+                    dataEditor.setLinkedProcessId(Integer.parseInt(idString));
+                } catch (NumberFormatException e) {
+                    logger.error(e);
+                }
+            }
+        }
+    }
+
+    /**
+     * Checks whether conditions are met for displayed the menu option to edit metadata of a linked process.
+     * The conditions are:
+     * - exactly one tree node in the logical tree is selected and the tree node represents a linked process
+     * - no logical tree node is selected; this represents the case when a linked parent process is selected (the logical
+     *      nodes of these parent processes are not contained within the logical tree of the current process,
+     *      thus the selected logical node is null in this case)
+     * @return whether the option to edit metadata of a linked process is displayed or not
+     */
+    public boolean isMetadataEditingPossible() {
+        List<TreeNode<Object>> selectedNodes = getSelectedLogicalNodes();
+        if (selectedNodes.isEmpty()) {
+            // no logical node is selected; this represents selection of linked parent processes
+            return true;
+        } else if (selectedNodes.size() == 1) {
+            // exactly one logical node is selected; metadata can be edited if node represents "linked" process
+            TreeNode<Object> selectedNode = selectedNodes.getFirst();
+            if (selectedNode.getData() instanceof StructureTreeNode) {
+                return ((StructureTreeNode) selectedNode.getData()).isLinked();
+            } else {
+                return false;
+            }
+        } else {
+            // multiple logical tree nodes are selected
+            return false;
         }
     }
 
